fixed z-index for buttons

--- a/styles.css
+++ b/styles.css
@@ -195,8 +195,11 @@ body {
 /* IMG SCROLL */
 
 .img-container {
+  z-index: 1;
+
   width: 100%;
-  height: 400px; /* Adjust height as needed */
+  height: 400px;
+  /* Adjust height as needed */
   overflow-y: auto;
   overflow-x: hidden;
   border: 1px solid #ddd;
@@ -204,7 +207,7 @@ body {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   position: relative;
   background-color: white;
-  
+
   /* Custom scrollbar */
   scrollbar-width: thin;
   scrollbar-color: #445f9d #f1f1f1;
@@ -376,7 +379,7 @@ now Browse Curated Resources*/
 .container-5 {
   background-color: #000000c5;
   border-radius: 15px;
- 
+
   padding: 25px;
   margin: 20px auto;
   width: 79%;
@@ -404,10 +407,11 @@ now Browse Curated Resources*/
 }
 
 .resources-table-5 {
-  width: 90%;
+  width: 85%;
   border-collapse: separate;
   border-spacing: 10px;
   margin-top: 15px;
+  min-width: 200px;
 }
 
 .resources-table-5 td {
@@ -459,6 +463,8 @@ now Browse Curated Resources*/
 
 
 .home-button {
+  z-index: 100;
+
   position: fixed;
   bottom: 60px;
   right: 20px;
@@ -493,6 +499,8 @@ now Browse Curated Resources*/
 /* BACK BUTTON */
 
 .back-icon {
+  z-index: 100;
+
   position: fixed;
   bottom: 60px;
   right: 65px;
@@ -529,6 +537,8 @@ now Browse Curated Resources*/
 
 
 .scroll-button {
+  z-index: 100;
+
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   bottom: 10px;
   right: 10px;
